--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,9 @@ Computation/x64/Debug/Computation.log
 Computation/x64/Debug/Computation.ilk
 Computation/x64/Debug/Computation.exe.recipe
 Computation/x64/Debug/Computation.exe
+/.vs/SimpleFluidSim/FileContentIndex/372beca9-82bb-4aa4-89cf-059cdb2b43da.vsidx
+/.vs/SimpleFluidSim/FileContentIndex/98aaa8af-fcf2-409a-af2b-f888cf5dcad2.vsidx
+Computation/Computation.sln
+Computation/Computation.vcxproj
+Computation/Computation.vcxproj.filters
+Computation/Computation.vcxproj.user
