--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,21 @@ Computation/Computation.sln
 Computation/Computation.vcxproj
 Computation/Computation.vcxproj.filters
 Computation/Computation.vcxproj.user
+Computation/x64/Release/vc143.pdb
+Computation/x64/Release/main.obj
+Computation/x64/Release/Computation.vcxproj.FileListAbsolute.txt
+Computation/x64/Release/Computation.tlog/link.write.2u.tlog
+Computation/x64/Release/Computation.tlog/link.write.1.tlog
+Computation/x64/Release/Computation.tlog/link.read.1.tlog
+Computation/x64/Release/Computation.tlog/link.command.1.tlog
+Computation/x64/Release/Computation.tlog/Computation.lastbuildstate
+Computation/x64/Release/Computation.tlog/CL.write.1.tlog
+Computation/x64/Release/Computation.tlog/CL.read.1.tlog
+Computation/x64/Release/Computation.tlog/Cl.items.tlog
+Computation/x64/Release/Computation.tlog/CL.command.1.tlog
+Computation/x64/Release/Computation.pdb
+Computation/x64/Release/Computation.log
+Computation/x64/Release/Computation.ipdb
+Computation/x64/Release/Computation.iobj
+Computation/x64/Release/Computation.exe.recipe
+Computation/x64/Release/Computation.exe
