Attempt to visualize data

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ Computation/x64/Release/Computation.ipdb
 Computation/x64/Release/Computation.iobj
 Computation/x64/Release/Computation.exe.recipe
 Computation/x64/Release/Computation.exe
+/Computation/data
